# PyPantograph

./: .gitmodules  .gitpod.yml  README.md  build-pantograph.py  pyproject.toml
.docker/gitpod/: Dockerfile
.github/workflows/: doc.yaml  docs.yaml  test.yaml
doc/: _toc.yml  goal.ipynb  intro.md  setup.md
docs/: Demo.ipynb  _toc.yml  api-message.rst  data.ipynb  demo-engineering.ipynb  drafting.ipynb  frontend.ipynb  goal.ipynb  intro.md  setup.md
examples/: README.md  aesop.py  branch-sorry.py  simple.py  sketch.py
examples/Example/: lake-manifest.json  lakefile.lean
pantograph/: data.py  expr.py  message.py  search.py  server.py  test_message.py  test_search.py  test_server.py  test_utils.py  utils.py
