[project]
name = "pantograph"
version = "0.3.0"
description = "A machine-to-machine interaction system for Lean"
authors = [
    {name = "Leni Aniva", email = "aniva@stanford.edu"},
    {name = "contributors"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["pantograph/pantograph-repl", "pantograph/lean-toolchain"]

[tool.hatch.build.targets.wheel]
include = ["pantograph/pantograph-repl", "pantograph/lean-toolchain"]

[project.optional-dependencies]
doc = [
    "notebook>=7.2.1",
    "jupyter-book>=1.0.3",
]

[tool.hatch.build.hooks.custom]
path = "build-pantograph.py"
