[project]
name = "pantograph"
version = "0.3.4"
description = "A machine-to-machine interaction system for Lean"
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "Leni Aniva", email = "aniva@stanford.edu"},
    {name = "contributors"}
]
requires-python = ">=3.11.0"
dependencies = []
[dependency-groups]
doc = [
    "notebook"
]

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "pantograph/pantograph-repl", format = ["sdist", "wheel"] },
    { path = "pantograph/lean-toolchain", format = ["sdist", "wheel"] },
    { path = "src", format = ["sdist", "wheel"] },
]

[tool.poetry.build]
generate-setup-file = false
script = "build-pantograph.py"

[tool.poetry.group.doc]
optional = true
[tool.poetry.group.doc.dependencies]
notebook = "^7.2.1"
jupyter-book = "^1.0.3"
